--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
     "postinstall": "max setup",
     "prepare": "husky install",
     "setup": "max setup",
-    "start": "npm run dev"
+    "start": "npm run dev",
+    "lint": "max lint"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
     "**/*.{js,jsx,tsx,ts,less,md,json}": [
-      "max lint"
+      "max lint",
+      "git add"
     ]
   },
   "dependencies": {
