--- a/package.json
+++ b/package.json
@@ -9,17 +9,16 @@
     "prepare": "husky install",
     "setup": "max setup",
     "start": "npm run dev",
-    "lint": "max lint"
+    "lint": "max lint max lint --fix"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "npm run lint-staged"
     }
   },
   "lint-staged": {
     "**/*.{js,jsx,tsx,ts,less,md,json}": [
-      "max lint",
-      "git add"
+      "npm run lint"
     ]
   },
   "dependencies": {
