--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "dev": "max dev",
     "format": "prettier --cache --write .",
     "postinstall": "max setup",
-    "prepare": "husky install",
+    // "prepare": "husky install",
     "setup": "max setup",
     "start": "npm run dev",
-    "lint": "max lint max lint --fix"
+    "lint": "max lint max lint --fix",
+    "lint-staged:js": "eslint --ext .js,.jsx,.ts,.tsx "
   },
   "husky": {
     "hooks": {
@@ -17,9 +18,10 @@
     }
   },
   "lint-staged": {
-    "**/*.{js,jsx,tsx,ts,less,md,json}": [
-      "npm run lint"
-    ]
+    "**/*.{js,jsx,ts,tsx}": "npm run lint-staged:js"
+    // "**/*.{js,jsx,tsx,ts,less,md,json}": [
+    //   "npm run lint"
+    // ]
   },
   "dependencies": {
     "@ant-design/pro-components": "^2.0.1",
