--- a/package.json
+++ b/package.json
@@ -9,16 +9,11 @@
     "prepare": "husky install",
     "setup": "max setup",
     "start": "npm run dev",
-    "lint": "max lint max lint --fix"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint-staged"
-    }
+    "lint:fix": "max lint max lint --fix"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,css,less}": [
-      "umi lint"
+    "**/*.{js,jsx,tsx,ts,less,md,json}": [
+      "prettier --write"
     ]
   },
   "dependencies": {
@@ -33,7 +28,7 @@
     "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "husky": "^8.0.1",
+    "husky": "^8.0.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "prettier-plugin-organize-imports": "^2",
