--- a/package.json
+++ b/package.json
@@ -6,21 +6,14 @@
     "dev": "max dev",
     "format": "prettier --cache --write .",
     "postinstall": "max setup",
+    "lint:fix": "max lint max lint --fix",
     "prepare": "husky install",
     "setup": "max setup",
-    "start": "npm run dev",
-    "lint:fix": "max lint max lint --fix",
-    "lint-staged": "lint-staged"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint-staged"
-    }
+    "start": "npm run dev"
   },
   "lint-staged": {
     "**/*.{js,jsx,tsx,ts,less,md,json}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "dependencies": {
