--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "max dev",
     "format": "prettier --cache --write .",
     "postinstall": "max setup",
+    "lint-staged": "lint-staged",
     "lint:fix": "max lint max lint --fix",
     "prepare": "husky install",
     "setup": "max setup",
