--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "lint-staged": {
     "**/*.{js,jsx,tsx,ts,less,md,json}": [
       "prettier --write"
+    ],
+    "*.{js,jsx,ts,tsx,css,less}": [
+      "umi lint"
     ]
   },
   "dependencies": {
